--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href = "assets/css/style.css">
+    <link type = "text/css" rel="stylesheet" href = "assets/css/style.css">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
                     <div class="card-header">
                       Top Articles
                     </div>
-                    <div class="card-body">
+                    <div class="card-body" id = "articles">
 
                     </div>
                   </div>
@@ -86,7 +86,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/javascript/app.js" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script src="assets/javascript/app.js"></script>
+    <script type = "text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
 </html>
